# Some-Creamer

./: .gitignore  CLAUDE.md  Creamer_1989_Tutorial.md  Foundations_Canonical_Variables.md  Lie_Transform_Notes.md  Practical_1D_Creamer_Form.md  README.md  RESEARCH_LOG.md  SKILL.md
Creamer in md/: MinerU_markdown_Creamer_et_al._-_1989_-_Improved_linear_representation_of_ocean_surface_waves_2032101928325488640.md  MinerU_markdown_Creamer_waves_Taylor_8July22_2032128245095862272.md  MinerU_markdown_Wright_and_Creamer_-_1994_-_Improved_linear_representation_of_surface_waves._Part_2._Slowly_varying_bottoms_and_currents_2032125816094728192.md
MATLAB/: README.md  creamer_four_phase_separation.m  directional_creamer_transform.m  directional_frequency_filter.m  load_validation_third_order_case.m  match_validation_second_order_case.m  run_directional_creamer_case.m  run_directional_creamer_eta33_case.m  run_directional_creamer_eta33_flow_compare.m
MATLAB/core/: apply_global_phase_shift_2d.m  creamer_four_phase_separation_cpp.m  directional_creamer_transform.m  directional_creamer_transform_cpp.m
MATLAB/directional/: plot_creamer_centerline_spectrum.m  run_directional_creamer_case.m  run_directional_creamer_eta33_case.m  run_directional_creamer_phi_case.m
MATLAB/unidirectional/: Linear_focus_envelope.m  apply_global_phase_shift_1d.m  creamer_eta33_h3h4_single_frequency_1d.m  creamer_eta33_h3h4_triad_1d.m  creamer_eta33_h3h4_triad_1d_cpp.m  (+14 more)
Mathematica/: 00_notation_and_assumptions.wl  02_poisson_and_lie_tools.wl  04_1d_hilbert_remap.wl  05_reconstruct_4_13.wl  README.md  cream_transform_scratch.wl
cpp/creamer_flow/: CMakeLists.txt  README.md  creamer_eta33_triad_1d.cpp  creamer_flow.cpp
(+27 files in other folders)
